Fixed image cropping.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,7 @@ aside {
 	float: right;
 	margin: 10px;
 	width: 21%;
-	padding: 30px;
+	padding: 30px 30px 70px 30px;
 	border-radius: 15px;
 }
 
